Scrollbar and layout fixes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,6 +35,7 @@ p { letter-spacing: 0.4px; }
 }
 #nav ul > li {
 	display: inline;
+	margin-right: 16px;
 }
 #nav ul > li:last-child {
 	display: inline;
@@ -68,11 +69,11 @@ p { letter-spacing: 0.4px; }
 }
 
 #content {
-	height: calc(100vh - 60px - 128px - 44px - 40px);
-	min-height: 500px;
+	height: calc(100vh - 60px - 124px - 16px - 44px - 40px);
+	min-height: 420px;
 
 	position: relative;
-    max-width: 540px;
+    max-width: 560px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -166,6 +167,18 @@ p { letter-spacing: 0.4px; }
 	-webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 16%, rgba(0, 0, 0, 1) 84%, rgba(0, 0, 0, 0));
 	mask-image:         linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 16%, rgba(0, 0, 0, 1) 84%, rgba(0, 0, 0, 0));
 }
+#lyrics-container::-webkit-scrollbar-track {
+	border-radius: 4px;
+	background-color: transparent;
+}
+#lyrics-container::-webkit-scrollbar {
+	width: 8px;
+	background-color: transparent;
+}
+#lyrics-container::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	background-color: #555;
+}
 #lyrics {
 	padding-top: calc(300px * 0.16);
 	padding-bottom: calc(300px * 0.16);
@@ -174,25 +187,7 @@ p { letter-spacing: 0.4px; }
 }
 
 
-#lyrics-container::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: transparent;
-}
 
-#lyrics-container::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: transparent;
-}
-
-#lyrics-container::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
-}
 
 
 
